--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
-    ext.hilt_version = '2.35'
+    ext {
+        kotlin_version = "1.3.72"
+        hilt_version = '2.35'
+        version_navigation = "2.3.5"
+        activityVersion = '1.1.0'
+        appCompatVersion = '1.2.0'
+        constraintLayoutVersion = '2.0.2'
+        coreTestingVersion = '2.1.0'
+        coroutines = '1.3.9'
+        lifecycleVersion = '2.2.0'
+        materialVersion = '1.2.1'
+        roomVersion = '2.2.5'
+        // testing
+        junitVersion = '4.13.1'
+        espressoVersion = '3.1.0'
+        androidxJunitVersion = '1.1.2'
+    }
 
     repositories {
         google()
@@ -10,7 +25,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -28,17 +43,4 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-ext {
-    activityVersion = '1.1.0'
-    appCompatVersion = '1.2.0'
-    constraintLayoutVersion = '2.0.2'
-    coreTestingVersion = '2.1.0'
-    coroutines = '1.3.9'
-    lifecycleVersion = '2.2.0'
-    materialVersion = '1.2.1'
-    roomVersion = '2.2.5'
-    // testing
-    junitVersion = '4.13.1'
-    espressoVersion = '3.1.0'
-    androidxJunitVersion = '1.1.2'
-}
+
