--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,14 @@
             </intent-filter>
         </activity>
 
+        <service android:name="com.trainingapp.tracking.TrackingService"
+            android:foregroundServiceType="location" />
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data
-            android:name="=com.google.android.geo.API_KEY"
+            android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_api_key" />
     </application>
 
